# Falcon_QGC

./: .pre-commit-config.yaml  justfile
.github/workflows/: docs.yml  pr-checks.yml  release.yml
command/: camera.py  orchestrator.py  phase0.py  phase1.py  phase2.py  phase3.py
command/common/: phase1_mission.py
custom/: CMakeLists.txt  PROGRESS.md  README.md  custom.qrc
custom/cmake/: CustomOverrides.cmake
custom/deploy/linux/: FGC.desktop  run-fgc.sh
custom/res/Custom/Widgets/: AircraftMissionPanel.qml  ControlSurfaceWidget.qml  CustomAttitudeWidget.qml  MissionPhasePanel.qml  MovablePanel.qml  RosActuatorSource.qml  RosVideoPanel.qml
custom/res/icons/: custom_qgroundcontrol.icns
custom/src/: CustomPlugin.cc  CustomPlugin.h  FlyViewCustomLayer.qml  FlyViewToolStripActionList.qml
custom/src/AutoPilotPlugin/: CustomAutoPilotPlugin.cc
custom/src/FirmwarePlugin/: CustomFirmwarePlugin.cc  CustomFirmwarePlugin.h
custom/src/Position/: CustomGeoclueSource.cc  CustomGeoclueSource.h
custom/src/Ros/: RosBridge.cc  RosBridge.h  RosVideoView.cc  RosVideoView.h
custom/tools/: fake_image.py  fake_mavlink.py  real_mission.py  setup_geoclue.sh
gz/models/led_ring_quad_model/: model.config
gz/models/waypoint/: model.config
gz/models/waypoint/meshes/: REP.stl  wp1.stl  wp2.stl  wp3.stl  wp4.stl  wp5.stl
src/AppSettings/: MapProviderSettings.qml
src/AppSettings/pages/: Maps.SettingsUI.json  SettingsPages.json
src/FlightMap/MapItems/: VehicleMapItem.qml
src/FlightMap/Widgets/: QGCPitchIndicator.qml
src/FlyView/: FlyView.qml  FlyViewBottomRightRowLayout.qml  FlyViewVideo.qml  FlyViewWidgetLayer.qml
src/MainWindow/: MainWindow.qml
src/PlanView/: PlanView.qml
src/QmlControls/: QGCToolBarButton.qml  SubMenuButton.qml  ToolStrip.qml
src/QtLocationPlugin/: QGCMapUrlEngine.cpp
src/QtLocationPlugin/Providers/: GenericMapProvider.cpp  GenericMapProvider.h
src/Settings/: FlightMap.SettingsGroup.json
src/Toolbar/: FlightModeMenuIndicator.qml  FlyViewToolBar.qml  PlanViewToolBar.qml  SelectViewDropdown.qml
tools/: pyproject.toml
tools/lsp/vscode-extension/: package.json
